[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acatama"
description = "AcATaMa is an open-source QGIS plugin designed to provide comprehensive support for accuracy assessment and sample-based area estimation of raster thematic maps"
authors = [{ name = "Xavier C. Llano", email = "xavier.corredor.llano@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
  "dask",
  "toolz",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-qgis",
  "fiona",
  "shapely",
  "dask",
  "toolz",
]
docs = [
  "jupyter-book<2",
  "jupytext",
]

[tool.hatch.build.targets.wheel]
packages = ["AcATaMa"]

[tool.qgis-plugin-ci]
plugin_path = "AcATaMa"
github_organization_slug = "IDEAM"
project_slug = "acatama"

[tool.uv]
package = false

[tool.uv.sources]
qgis = { path = "/usr/lib/python3.13/site-packages" }

[tool.pyright]
extraPaths = [".."]  # include project folder
venv = ".venv"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportMissingTypeStubs = false
reportMissingParameterType = false
