[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acatama"
version = "0.0"
description = "AcATaMa is an open-source QGIS plugin designed to provide comprehensive support for accuracy assessment and sample-based area estimation of raster thematic maps"
authors = [{ name = "Xavier C. Llano", email = "xavier.corredor.llano@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
  "dask",
  "toolz",
]

[project.optional-dependencies]
# uv pip sync pyproject.toml --extra docs
docs = [
  "jupyter-book<2",
  "jupytext",
]
# uv pip sync pyproject.toml --extra test
test = [
  "pytest",
  "pytest-metadata",
  "pytest-qgis",
  "fiona",
  "shapely",
  "dask",
  "toolz",
]

[tool.hatch.build.targets.wheel]
packages = ["AcATaMa"]

[tool.qgis-plugin-ci]
plugin_path = "AcATaMa"
github_organization_slug = "SMByC"
project_slug = "AcATaMa"

[tool.uv]
package = false

[tool.uv.sources]
qgis = { path = "/usr/lib/python3.14/site-packages" }

[tool.pyright]
extraPaths = ["/usr/lib/python3.14/site-packages/"]
venv = ".venv"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportMissingTypeStubs = false
reportMissingParameterType = false

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["extlibs", "resources_rc.py"]

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = ["E", "W", "F", "I", "UP", "B", "C4", "RUF", "SIM"]
extend-select = ["E226"]
ignore = ["B904", "SIM102", "SIM105"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
